<resources>
    <string name="app_name">Online Shop</string>
    <string name="title_login">Login</string>
    <string name="title_cart">Корзина</string>
    <string name="title_main">Главная</string>
    <string name="title_profile">Профиль</string>
    <string name="title_sale">Акции</string>
    <string name="title_catalog">Каталог</string>
    <string name="name">Имя</string>
    <string name="surname">Фамилия</string>
    <string name="phone_number">Номер телефона</string>
    <string name="to_login">Войти</string>
    <string name="login">Вход</string>
    <string name="loyalty_text">Нажимая кнопку “Войти”, Вы принимаете \n <u>условия программы лояльности</u></string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mask_hint">XXXXXXXXXX</string>
    <string name="simple_mask">##############</string>
    <string name="mask">+7 ### ###-##-##</string>
    <string name="code_and_mask">+7 XXX XXX-XX-XX</string>
    <string name="main">Главная</string>
    <string name="catalog">Каталог</string>
    <string name="filters">Фильтры</string>
    <string name="watch_all">Смотреть все</string>
    <string name="face">Лицо</string>
    <string name="body">Тело</string>
    <string name="tan">Загар</string>
    <string name="face_mask">Маска</string>
    <string name="close_tag_button">close tag button</string>
    <string name="sort_image_view">Sort image view</string>
    <string name="question_button">Question button</string>
    <string name="button_back">Button back</string>
    <string name="button_add_to_favourites">Button add to favourites</string>
    <string name="hide">Скрыть</string>
    <string name="characteristics">Характеристики</string>
    <string name="composition">Состав</string>
    <string name="add_to_cart">Добавить в корзину</string>
    <string name="more">Подробнее</string>
    <string name="available">Доступно для заказа</string>
    <string name="description">Описание</string>
    <string name="profile">Личный кабинет</string>
    <string name="phone_hint">+79938774402</string>
    <string name="mask_phone_profile">## ### ###-##-##</string>
    <string name="favourites">Избранное</string>
    <string name="shops">Магазины</string>
    <string name="feedback">Обратная связь</string>
    <string name="offers">Оферта</string>
    <string name="purchase_return">Возврат товара</string>
    <string name="logout">Выйти</string>
    <string name="products">Товары</string>
    <string name="brands">Бренды</string>
    <string name="cart">Корзина</string>
    <string name="discount">Акции</string>
    <string-array name="sort_array">
        <item>По популярности</item>
        <item>По уменьшению цены</item>
        <item>По возрастанию цены</item>
    </string-array>
</resources>