<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_main"
        android:icon="@drawable/main"
        android:title="@string/title_main" />

    <item
        android:id="@+id/navigation_catalog"
        android:icon="@drawable/catalog"
        android:title="@string/title_catalog" />

    <item
        android:id="@+id/navigation_cart"
        android:icon="@drawable/cart"
        android:title="@string/title_cart" />

    <item
        android:id="@+id/navigation_sale"
        android:icon="@drawable/discount"
        android:title="@string/title_sale" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/profile"
        android:title="@string/title_profile" />

</menu>