<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.catalog.CatalogFragment">


    <TextView
        android:id="@+id/catalogTitle"
        style="@style/TitleStyle"
        android:text="@string/catalog"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/sortImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginStart="21dp"
        android:src="@drawable/sort"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/catalogTitle"
        android:contentDescription="@string/sort_image_view" />


    <Spinner
        android:id="@+id/spinner"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_marginStart="13dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toEndOf="@+id/sortImageView"
        app:layout_constraintTop_toBottomOf="@+id/catalogTitle" />

    <TextView
        android:id="@+id/filters"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/sf_pro_display"
        android:text="@string/filters"
        android:textColor="@color/dark_grey"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/catalogTitle" />

    <ImageView
        android:id="@+id/filter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="8dp"
        android:src="@drawable/filters"
        app:layout_constraintEnd_toStartOf="@+id/filters"
        app:layout_constraintTop_toBottomOf="@+id/catalogTitle" />

    <HorizontalScrollView
        android:id="@+id/listView"
        android:layout_width="match_parent"
        android:layout_height="28dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="17dp"
        android:scrollbars="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layout_tag_watch_all"
                style="@style/TagLayoutStyle">

                <TextView
                    android:id="@+id/tag_watch_all"
                    style="@style/TagStyle"
                    android:text="@string/watch_all"
                    tools:ignore="MissingConstraints" />

                <ImageButton
                    android:id="@+id/btn_tag_watch_all"
                    style="@style/MiniXStyle"
                    android:contentDescription="@string/close_tag_button"
                    app:layout_constraintStart_toEndOf="@+id/tag_watch_all"
                    tools:ignore="MissingConstraints" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layout_tag_face"
                style="@style/TagLayoutStyle">

                <TextView
                    android:id="@+id/tag_face"
                    style="@style/TagStyle"
                    android:text="@string/face"
                    tools:ignore="MissingConstraints" />

                <ImageButton
                    android:id="@+id/btn_tag_face"
                    style="@style/MiniXStyle"
                    android:contentDescription="@string/close_tag_button"
                    app:layout_constraintStart_toEndOf="@+id/tag_face"
                    tools:ignore="MissingConstraints" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layout_tag_body"
                style="@style/TagLayoutStyle">

                <TextView
                    android:id="@+id/tag_body"
                    style="@style/TagStyle"
                    android:text="@string/body"
                    tools:ignore="MissingConstraints" />

                <ImageButton
                    android:id="@+id/btn_tag_body"
                    style="@style/MiniXStyle"
                    android:contentDescription="@string/close_tag_button"
                    app:layout_constraintStart_toEndOf="@+id/tag_body"
                    tools:ignore="MissingConstraints" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layout_tag_tan"
                style="@style/TagLayoutStyle">

                <TextView
                    android:id="@+id/tag_tan"
                    style="@style/TagStyle"
                    android:text="@string/tan"
                    tools:ignore="MissingConstraints" />

                <ImageButton
                    android:id="@+id/btn_tag_tan"
                    style="@style/MiniXStyle"
                    android:contentDescription="@string/close_tag_button"
                    app:layout_constraintStart_toEndOf="@+id/tag_tan"
                    tools:ignore="MissingConstraints" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layout_tag_mask"
                style="@style/TagLayoutStyle">

                <TextView
                    android:id="@+id/tag_mask"
                    style="@style/TagStyle"
                    android:text="@string/face_mask"
                    tools:ignore="MissingConstraints" />

                <ImageButton
                    android:id="@+id/btn_tag_mask"
                    style="@style/MiniXStyle"
                    android:contentDescription="@string/close_tag_button"
                    app:layout_constraintStart_toEndOf="@+id/tag_mask"
                    tools:ignore="MissingConstraints" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </HorizontalScrollView>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="32dp"
        android:layout_marginHorizontal="9dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:listitem="@layout/product_card"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listView" />
</androidx.constraintlayout.widget.ConstraintLayout>