<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="16dp"
    tools:context=".ui.favourites.FavouritesFragment">

    <ImageButton
        android:id="@+id/btnBack"
        android:layout_width="30dp"
        android:layout_height="25dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="14dp"
        android:background="@drawable/back"
        android:contentDescription="@string/button_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/favouritesTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="14dp"
        android:fontFamily="@font/sf_pro_display"
        android:text="@string/favourites"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/btnBack"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/greyCard"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginTop="13dp"
        android:layout_weight="1"
        android:background="@drawable/rounded_8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/favouritesTitle" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/whiteCard_products"
        android:layout_width="0dp"
        android:layout_height="36dp"
        android:layout_marginStart="3dp"
        android:layout_weight="1"
        android:clickable="true"
        android:text="@string/products"
        android:textAllCaps="false"
        android:fontFamily="@font/sf_pro_display"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:background="@drawable/rounded_8dp_white"
        app:layout_constraintBottom_toBottomOf="@+id/greyCard"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/greyCard" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/whiteCard_brands"
        android:layout_width="0dp"
        android:layout_height="36dp"
        android:layout_weight="1"
        android:layout_marginEnd="3dp"
        android:text="@string/brands"
        android:clickable="true"
        android:textAllCaps="false"
        android:fontFamily="@font/sf_pro_display"
        android:textColor="@color/grey"
        android:textSize="14sp"
        android:background="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="@+id/greyCard"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="@+id/greyCard" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/favouritesRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/greyCard" />


</androidx.constraintlayout.widget.ConstraintLayout>